# demo-axum

./: Cargo.toml  LICENSE  Makefile  compose.yaml  env.template  perf.data  readme.md
crates/api/: Cargo.toml
crates/api/src/: docs.rs  lib.rs  query.rs  responses.rs  statics.rs
crates/api/statics/: swagger-initializer.js
crates/db/: Cargo.toml
crates/db/src/: lib.rs
crates/entity/: Cargo.toml
crates/entity/src/: lib.rs  post.rs  prelude.rs
crates/migration/: Cargo.toml
crates/migration/src/: m20220101_000001_create_table.rs
statics/: swagger-initializer.js
