[workspace]
members = [ "bin", "crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace.dependencies]
sea-orm = { version = "0.10.4", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"]}
axum = "0.6"
axum-extra = { version = "0", features = ["spa"] }
tower = "0"
tower-http = { version = "0", features = ["cors", "fs"] }
tokio = { version = "1", features = ["full"]}
serde = "1"
serde_json = "1"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = "0.3"
log = "0.4"
dotenvy = "0.15.0"
once_cell = "1"
anyhow = "1.0.60"
aide = { version = "0.9", features = ["redoc", "macros", "axum-extra-query"]}
schemars = "0.8"
hyper = "0"