[package]
name = "db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm = { workspace = true }
tokio = { workspace = true }
tracing = {workspace = true,default-features =false }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
log = { workspace = true }
dotenvy = { workspace = true }
once_cell = { workspace = true }
